guardrail/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    "app.kubernetes.io/name": "nemo-guardrail"
    "app.kubernetes.io/instance": "nemo-guardrail"
  annotations:
    "openshift.io/scc": "nonroot"
  name: nemo-guardrail
  namespace: nemo-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 0
  selector:
    matchLabels:
      "app": "nemo-guardrail"
      "app.kubernetes.io/name": "nemo-guardrail"
      "app.kubernetes.io/instance": "nemo-guardrail"
  template:
    metadata:
      labels:
        "app": "nemo-guardrail"
        "app.kubernetes.io/name": "nemo-guardrail"
        "app.kubernetes.io/instance": "nemo-guardrail"
      annotations:
        "openshift.io/scc": "nonroot"
    spec:
      serviceAccountName: nemo-guardrail
      containers:
        - name: nemo-guardrail-ctr
          image: quay.io/xiezhang7/nemoguardrails-nim-test
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: cache-volume
              mountPath: /.cache
            - name: config-volume
              mountPath: /.config
          ports:
            - containerPort: 8000
              protocol: TCP
      volumes:
        - name: cache-volume
          emptyDir:
            sizeLimit: 500Mi
        - name: config-volume
          emptyDir:
            sizeLimit: 50Mi
