guardrail/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nemo-guardrail
  namespace: nemo-service
spec:
  path: /
  to:
    kind: Service
    name: nemo-guardrail
  port:
    targetPort: service-port
